--- a/martini.html
+++ b/martini.html
@@ -48,6 +48,8 @@ a{color:#66D;}
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-itunes-app" content="app-id=1570003820">
 
+    <script defer data-domain="martini.hydrus.xyz" data-api="http://vps.hydrus.xyz/api/event" src="http://vps.hydrus.xyz/js/script.js"></script>
+
   </head>
   <body>
   <header>
